--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-  <drawable name="waveform_selected">#33b5e5</drawable>
+  <drawable name="waveform_selected">#ffffff</drawable>
   <drawable name="waveform_unselected">#195a72</drawable>
   <drawable name="waveform_unselected_bkgnd_overlay">#a6def4</drawable>
   <drawable name="selection_border">#ffffff</drawable>
