fixbug: tinh toan sai width view mix khi su dung ca startMarker va endMarker

--- a/app/src/main/res/layout/activity_mix_audio.xml
+++ b/app/src/main/res/layout/activity_mix_audio.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <HorizontalScrollView
-        android:id="@+id/asdfasdf"
+        android:id="@+id/horizontalScrollMix"
         android:layout_width="match_parent"
         android:fillViewport="true"
         android:layout_height="0dp"
