--- a/app/src/main/res/layout/activity_mix_audio.xml
+++ b/app/src/main/res/layout/activity_mix_audio.xml
@@ -32,6 +32,7 @@
     </HorizontalScrollView>
 
     <View
+        android:id="@+id/line"
         android:layout_width="2dp"
         android:layout_height="200dp"
         android:background="#000000"
